--- a/src/App.css
+++ b/src/App.css
@@ -73,13 +73,11 @@ body {
 
 .dashboard-container {
   display: flex;
-  min-height: 100vh;
-  font-family: sans-serif;
+  align-items: stretch;
   background-color: #f5f5f5;
   width: 100%;
-  max-width: 100vw;
-  overflow-x: hidden;
 }
+
 
 /* Sidebar */
 .sidebar {
@@ -89,7 +87,11 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
+
+  /* flexible height */
+  height: auto;
 }
+
 
 .sidebar-header h2 {
   margin: 0;
